--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,4 +1,6 @@
 # Skills
+- skills: Yarn
+  description: Organised dependencies, managed resources and used hooks and loops to build two hats, two tea-cosies, one trivet and half a sock.
 
 # Education
 - skill: Education
